2015-05-16  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/66113
	* expr.c (is_parent_of_current_ns):  New function.
	(check_restricted):  Use it.

2015-05-16  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/66113
	* gfortran.dg/block_14.f90:  New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@223238 138bc75d-0d04-0410-961f-82ee72b054a4